<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/userNameLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/users_24x24"
        android:ems="10"
        android:fontFamily="@font/broshk"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textAlignment="center"
        android:textColorHint="@color/dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passWordLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/shield_24x24"
        android:ems="10"
        android:fontFamily="@font/broshk"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="3dp"
        android:textAlignment="center"
        android:textColorHint="@color/dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/userNameLog"
        app:layout_constraintTop_toBottomOf="@+id/userNameLog"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/splash_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_splash" />

    <ImageView
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="78dp"
        android:clickable="true"
        android:contentDescription="@string/login_button"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        app:srcCompat="@mipmap/login" />

    <ProgressBar
        android:id="@+id/loginLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="@+id/logInBtn"
        app:layout_constraintTop_toTopOf="@+id/logInBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/broshk"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgetPassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/broshk"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/passWordLog" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/broshk"
        android:text="@string/no_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/passWordLog"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassBtn" />

    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/broshk"
        android:onClick="signUpClick"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/broshk"
        android:text="@string/ict"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>