<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cancel_course"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:contentDescription="@string/cancel"
        android:elevation="3dp"
        android:clickable="true"
        android:focusable="true"
        android:outlineProvider="none"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_cancel" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="14dp"

                android:layout_marginTop="5dp"
                android:layout_marginEnd="37dp"
                android:contentDescription="@string/android_title"
                android:src="@mipmap/ic_android"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/courseDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.636" />


            <TextView
                android:id="@+id/courseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/broshk"
                android:text="@string/android_training"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/courseDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/courseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/broshk"
                android:text="@string/android_tr_date"
                android:textAlignment="center"
                android:textColor="@color/olive"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/newsDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseName" />

            <TextView
                android:id="@+id/newsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/broshk"
                android:text="@string/attended"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseDate" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>