<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="100dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/positionImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="46dp"
                android:contentDescription="@string/android_title"
                android:src="@mipmap/ic_android"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="3dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/uploadCV"
                app:layout_constraintStart_toEndOf="@+id/positionImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/jobPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/broshk"
                    android:text="@string/position" />

                <TextView
                    android:id="@+id/experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/broshk"
                    android:text="@string/experience"
                    android:textColor="@color/olive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/broshk"
                    android:text="@string/attend"
                    android:textColor="@color/blue_ivy" />

            </LinearLayout>

            <TextView
                android:id="@+id/uploadCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="10dp"
                android:drawableTop="@drawable/down25"
                android:fontFamily="@font/broshk"
                android:paddingTop="3dp"
                android:text="@string/cv"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>